Refactor CSS styles for improved layout and consistency; update HTML structure for better organization and accessibility; add new About section with styling; implement Twitch embed functionality; enhance footer with copyright and contact information.

--- a/about.html
+++ b/about.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 
 <html lang="en">
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, intial-scale=1.0" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
-        <title>Hypekingfish</title>
-        <link href="style.css" rel="stylesheet"/>
-        <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-        <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div class="topnav">
-        <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png"/>Hypekingfish</a>
+
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, intial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+        href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet" />
+    <title>Hypekingfish</title>
+    <link href="style.css" rel="stylesheet" />
+    <link href="css/Nav.css" rel="stylesheet" />
+    <link href="css/Footer.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+    <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+    <div class="topnav">
+        <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png" />Hypekingfish</a>
         <div id="myLinks">
             <a href="about.html">About</a>
             <a href="flying.html">Flying</a>
@@ -25,80 +31,180 @@
         <a href="javascript:void(0);" class="topnav-icon" onclick="myFunction()">
             <i class="fa fa-bars"></i>
         </a>
-        </div>
-        <main>
-            <section class="AHeader">
+    </div>
+    <main>
+        <section class="AHeader">
             <h2>About Me</h2>
-            </section>
-            <section class="about">
+        </section>
+        <section class="about">
             <p>
-                Hi! I'm <strong>Hypekingfish</strong> (aka FishnBuckJr), an avid PC gamer and programming enthusiast. When I'm not coding or gaming, you can find me flying in Microsoft Flight Simulator.
+            Hi! I'm <strong>Hypekingfish</strong> (aka FishnBuckJr), an avid PC gamer and programming enthusiast.
+            When I'm not coding or gaming, you can find me flying in Microsoft Flight Simulator.
             </p>
             <div class="about-columns">
-                <div>
+            <div>
                 <h3>Skills & Interests</h3>
                 <ul>
-                    <li><strong>Programming:</strong> Python, HTML, CSS, JavaScript</li>
-                    <li><strong>Gaming:</strong> Flight Simulators, Minecraft, Factorio, and more!</li>
-                    <li><strong>Flight Simulation:</strong> 1,500+ hours in MSFS, flown nearly every aircraft.</li>
-                    <li><strong>Content Creation:</strong> 4.5+ years of video editing, streaming, and more!</li>
+                <li><strong>Programming:</strong> Python, HTML, CSS, JavaScript</li>
+                <li><strong>Gaming:</strong> Flight Simulators, Minecraft, Factorio, and more!</li>
+                <li><strong>Flight Simulation:</strong> 1,500+ hours in MSFS, flown nearly every aircraft.</li>
+                <li><strong>Content Creation:</strong> 4.5+ years of video editing, streaming, and more!</li>
+                <li><strong>Community:</strong> Active member of several online sim and dev communities</li>
                 </ul>
-                </div>
-                <div>
+            </div>
+            <div>
                 <h3>Current Projects</h3>
                 <ul>
-                    <li>Personal Website Development</li>
-                    <li>Flight Sim Content Creation</li>
-                    <li>Programming Projects (<a href="project.html">see Projects page</a>)</li>
+                <li>Personal Website Development</li>
+                <li>Flight Sim Content Creation</li>
+                <li>Programming Projects (<a href="project.html">see Projects page</a>)</li>
+                <li>Open-source tools for simmers and streamers</li>
                 </ul>
                 <h3>Fun Facts</h3>
                 <ul>
-                    <li><strong>Favorite Aircraft:</strong> Boeing 737-800</li>
-                    <li><strong>Most Hours in Game:</strong> MSFS 2020 (1,500+)</li>
+                <li><strong>Favorite Aircraft:</strong> Boeing 737-800</li>
+                <li><strong>Most Hours in Game:</strong> MSFS 2020 (1,500+)</li>
+                <li><strong>Favorite Programming Snack:</strong> Sour gummy worms</li>
+                <li><strong>Dream Destination:</strong> Tokyo, Japan</li>
+                <li><strong>Favorite IDE:</strong> Visual Studio Code</li>
+                <li><strong>Favorite Coding Music:</strong> Lo-fi beats & synthwave</li>
                 </ul>
+            </div>
+            </div>
+            <div class="about-extra">
+            <h3>Why "Hypekingfish"?</h3>
+            <p>
+                The name "Hypekingfish" is a blend of my love for energetic gaming sessions and my long-time nickname "Fish". Whether I'm streaming, coding, or flying, I always try to bring positive vibes and a bit of fun to everything I do!
+            </p>
+            </div>
+            <div class="about-extra">
+            <h3>My Setup</h3>
+            <ul>
+                <li><strong>PC Specs:</strong> Ryzen 7 CPU, RTX 3070, 32GB RAM</li>
+                <li><strong>Flight Controls:</strong> Honeycomb Alpha & Bravo, Thrustmaster TPR pedals</li>
+                <li><strong>Streaming Gear:</strong> Elgato Stream Deck, Blue Yeti mic, dual monitors</li>
+            </ul>
+            </div>
+            <div class="about-extra">
+            <h3>Let's Connect!</h3>
+            <p>
+                I love meeting new people who share my interests. Feel free to reach out via <a href="mailto:hypekingfishttv@gmail.com">email</a> or connect on <a href="https://discord.gg/yourdiscord" target="_blank">Discord</a>!
+            </p>
+            </div>
+            <div class="about-extra">
+            <h3>Achievements</h3>
+            <ul>
+                <li><strong>VATSIM Certified Controller</strong> – Helped manage virtual airspace for hundreds of pilots.</li>
+                <li><strong>Top 1% in MSFS Flight Hours</strong> – Logged over 1,500 hours in Microsoft Flight Simulator.</li>
+                <li><strong>Community Contributor</strong> – Developed open-source mods and tools for the sim community.</li>
+                <li><strong>Featured Streamer</strong> – Highlighted on Twitch for aviation and simulation content.</li>
+            </ul>
+            </div>
+            <div class="about-extra">
+            <h3>What I'm Learning</h3>
+            <ul>
+                <li>TypeScript and React for modern web development</li>
+                <li>Advanced flight planning and real-world aviation procedures</li>
+                <li>Video production and motion graphics</li>
+                <li>Cloud computing and serverless architecture</li>
+            </ul>
+            </div>
+            <div class="about-membership">
+            <h3>Memberships & Affiliations</h3>
+            <div class="membership-list">
+                <div class="membership-card">
+                <img src="img/vatsim_logo.png" alt="VATSIM Logo" />
+                <div>
+                    <strong>VATSIM Member</strong>
+                    <p>Active virtual pilot and controller since 2019.</p>
+                </div>
+                </div>
+                <div class="membership-card">
+                <img src="img/twitch_logo.png" alt="Twitch Logo" />
+                <div>
+                    <strong>Twitch Affiliate</strong>
+                    <p>Streaming aviation and gaming content regularly.</p>
+                </div>
+                </div>
+                <div class="membership-card">
+                <img src="img/github_logo.png" alt="GitHub Logo" />
+                <div>
+                    <strong>Open Source Contributor</strong>
+                    <p>Sharing code and collaborating on community projects.</p>
+                </div>
+                </div>
+                <div class="membership-card">
+                <img src="img/youtube_logo.png" alt="YouTube Logo" />
+                <div>
+                    <strong>YouTube Creator</strong>
+                    <p>Producing tutorials and flight sim videos.</p>
+                </div>
                 </div>
             </div>
-            </section>
-            <footer class="site-footer">
-                <div class="footer-content">
-                    <div class="footer-branding">
-                        <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag"/>
-                        <span class="footer-title">Created with passion by <strong>Hypekingfish</strong></span>
-                        <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag"/>
-                    </div>
-                    <div class="footer-social">
-                        <a href="https://github.com/[your-actual-username]" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-github"></i>
-                        </a>
-                        <a href="https://twitter.com/fishnbuckjr02" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-x-twitter"></i>
-                        </a>
-                        <a href="https://youtube.com/yourchannel" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                        <a href="https://twitch.tv/hypekingfish" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-twitch"></i>
-                        </a>
-                        <a href="https://discord.gg/yourdiscord" aria-label="Discord" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-discord"></i>
-                        </a>
-                    </div>
-                    <div class="footer-support">
-                        <h4>Support the Site</h4>
-                        <a href="https://www.buymeacoffee.com/Hypekingfish"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=Hypekingfish&button_colour=FFDD00&font_colour=000000&font_family=Cookie&outline_colour=000000&coffee_colour=ffffff" /></a>
-                    </div>
-                    <p class="footer-copyright">
-                        <small>
-                            &copy; <span id="year"></span> Hypekingfish. All rights reserved.<br>
-                            All content is property of Hypekingfish unless otherwise noted.
-                        </small>
-                    </p>
+            </div>
+        </section>
+        </section>
+        <footer class="site-footer">
+            <div class="footer-content">
+                <div class="footer-branding">
+                    <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag" />
+                    <span class="footer-title">Created with passion by <strong>Hypekingfish</strong></span>
+                    <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag" />
                 </div>
-            </footer>
-            <script>
-                document.getElementById('year').textContent = new Date().getFullYear();
-            </script>
-        </main>
-        <script src="scripts/navmenu.js"></script>
-    </body>
+                <div class="footer-social">
+                    <a href="https://github.com/[your-actual-username]" aria-label="GitHub" target="_blank"
+                        rel="noopener noreferrer">
+                        <i class="fab fa-github"></i>
+                    </a>
+                    <a href="https://twitter.com/fishnbuckjr02" aria-label="Twitter" target="_blank"
+                        rel="noopener noreferrer">
+                        <i class="fab fa-x-twitter"></i>
+                    </a>
+                    <a href="https://youtube.com/yourchannel" aria-label="YouTube" target="_blank"
+                        rel="noopener noreferrer">
+                        <i class="fab fa-youtube"></i>
+                    </a>
+                    <a href="https://twitch.tv/hypekingfish" aria-label="Twitch" target="_blank"
+                        rel="noopener noreferrer">
+                        <i class="fab fa-twitch"></i>
+                    </a>
+                    <a href="https://discord.gg/yourdiscord" aria-label="Discord" target="_blank"
+                        rel="noopener noreferrer">
+                        <i class="fab fa-discord"></i>
+                    </a>
+                </div>
+                <div class="footer-support">
+                    <h4>Support the Site</h4>
+                    <a href="https://www.buymeacoffee.com/Hypekingfish"><img
+                            src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=Hypekingfish&button_colour=FFDD00&font_colour=000000&font_family=Cookie&outline_colour=000000&coffee_colour=ffffff" /></a>
+                </div>
+                <p class="footer-copyright">
+                    <small>
+                        &copy; <span id="year"></span> <strong>Hypekingfish</strong> All rights reserved.<br />
+                        All content is property of Hypekingfish unless otherwise noted.<br />
+                        VATSIM, vZSE ARTCC, and all related logos are trademarks of their respective owners.<br />
+                        This site is not affiliated with or endorsed by VATSIM or any official aviation authority.<br />
+                        Images and content may not be reproduced without permission.<br />
+                        For inquiries, contact: <a
+                            href="mailto:hypekingfishttv@gmail.com">hypekingfishttv@gmail.com</a><br />
+                        Website code and design by Hypekingfish.<br />
+                        Some images and data may be used under fair use for educational or informational purposes.<br />
+                        If you believe your copyright has been infringed, please contact me for prompt removal or
+                        credit.<br />
+                        No personal data is collected or stored by this site.<br />
+                        Last updated: <span id="last-updated">2024-06-09</span>
+                    </small>
+                </p>
+            </div>
+        </footer>
+        <script>
+            document.getElementById("last-updated").textContent = document.lastModified.split(' ')[0];
+        </script>
+        <script>
+            document.getElementById("year").textContent = new Date().getFullYear();
+        </script>
+    </main>
+    <script src="scripts/navmenu.js"></script>
+</body>
+
 </html>
