--- a/streaming.html
+++ b/streaming.html
@@ -1,123 +1,142 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-        <link rel="preconnect" href="https://fonts.googleapis.com" />
-        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-        <link href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet"/>
-        <title>Hypekingfish</title>
-        <link href="style.css" rel="stylesheet">
-        <link href="css/Footer.css" rel="stylesheet"/>
-        <link href="css/Nav.css" rel="stylesheet"/>
-        <link href="css/Pricing.css" rel="stylesheet"/>
-        <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
-        <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
-    </head>
-    <body>
-        <div class="topnav">
-        <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png"/>Hypekingfish</a>
-        <div id="myLinks">
-            <a href="about.html">About</a>
-            <a href="flying.html">Flying</a>
-            <a href="project.html">Projects</a>
-            <a href="streaming.html">Streaming</a>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=EB+Garamond:ital,wght@0,400..800;1,400..800&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+    rel="stylesheet" />
+  <title>Hypekingfish</title>
+  <link href="style.css" rel="stylesheet">
+  <link href="css/Follows.css" rel="stylesheet" />
+  <link href="css/Footer.css" rel="stylesheet" />
+  <link href="css/Nav.css" rel="stylesheet" />
+  <link href="css/Pricing.css" rel="stylesheet" />
+  <link rel="icon" type="image/x-icon" href="/img/FnBLogo_FINAL_800.png">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
+  <script src="https://kit.fontawesome.com/f78443c527.js" crossorigin="anonymous"></script>
+</head>
+
+<body>
+  <div class="topnav">
+    <a href="index.html" class="active"><img src="img/FnBLogo_FINAL_800.png" />Hypekingfish</a>
+    <div id="myLinks">
+      <a href="about.html">About</a>
+      <a href="flying.html">Flying</a>
+      <a href="project.html">Projects</a>
+      <a href="streaming.html">Streaming</a>
+    </div>
+    <a href="javascript:void(0);" class="topnav-icon" onclick="myFunction()">
+      <i class="fa fa-bars"></i>
+    </a>
+  </div>
+  <section class="membership-section">
+    <h1>Become a Member on Ko-fi</h1>
+    <p>
+      Support Hypekingfish and unlock exclusive perks by joining a membership tier on
+      <a href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Ko-fi</a>!
+    </p>
+    <div class="pricing-table">
+      <div class="pricing-tier">
+        <h2>Bronze</h2>
+        <p class="price">$2.50/month</p>
+        <div class="tier-description">
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
         </div>
-        <a href="javascript:void(0);" class="topnav-icon" onclick="myFunction()">
-            <i class="fa fa-bars"></i>
+        <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Join</a>
+      </div>
+      <div class="pricing-tier">
+        <h2>Silver</h2>
+        <p class="price">$5/month</p>
+        <div class="tier-description">
+          <ul>
+            <li></li>
+            <li></li>
+            <li></li>
+          </ul>
+        </div>
+        <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Join</a>
+      </div>
+      <div class="pricing-tier">
+        <h2>Gold</h2>
+        <p class="price">$10/month</p>
+        <div class="tier-description">
+          <ul>
+            <li>All Silver Perks</li>
+            <li>Free Streamer Bot Extension's</li>
+            <li></li>
+          </ul>
+          <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Join</a>
+        </div>
+      </div>
+      <p>
+        <a href="https://ko-fi.com/hypekingfish" target="_blank" rel="noopener">
+          See all perks &amp; details on Ko-fi <i class="fa fa-arrow-right"></i>
         </a>
-        </div>
-        <div>
-            <section class="membership-section">
-                <h1>Become a Member on Ko-fi</h1>
-                <p>
-                    Support Hypekingfish and unlock exclusive perks by joining a membership tier on 
-                    <a href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Ko-fi</a>!
-                </p>
-                <div class="pricing-table">
-                    <div class="pricing-tier">
-                        <h2>Bronze</h2>
-                        <p class="price">$2.50/month</p>
-                        <div class="tier-description">
-                        <ul>
-                            <li></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
-                    </div>
-                        <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Join</a>
-                    </div>
-                    <div class="pricing-tier">
-                        <h2>Silver</h2>
-                        <p class="price">$5/month</p>
-                        <div class="tier-description">
-                            <ul>
-                                <li></li>
-                                <li></li>
-                                <li></li>
-                            </ul>
-                        </div>
-                        <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Join</a>
-                    </div>
-                    <div class="pricing-tier">
-                        <h2>Gold</h2>
-                        <p class="price">$10/month</p>
-                        <div class="tier-description">
-                            <ul>
-                                <li>All Silver Perks</li>
-                                <li>Free Streamer Bot Extension's</li>
-                                <li></li>
-                            </ul>
-                        <a class="join-btn" href="https://ko-fi.com/hypekingfish/tiers" target="_blank" rel="noopener">Join</a>
-                    </div>
-                </div>
-                <p>
-                    <a href="https://ko-fi.com/hypekingfish" target="_blank" rel="noopener">
-                        See all perks &amp; details on Ko-fi <i class="fa fa-arrow-right"></i>
-                    </a>
-                </p>
-            </section>
-        </div>
-        <footer class="site-footer">
-                <div class="footer-content">
-                    <div class="footer-branding">
-                        <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag"/>
-                        <span class="footer-title">Created with passion by <strong>Hypekingfish</strong></span>
-                        <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag"/>
-                    </div>
-                    <div class="footer-social">
-                        <a href="https://github.com/[your-actual-username]" aria-label="GitHub" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-github"></i>
-                        </a>
-                        <a href="https://twitter.com/fishnbuckjr02" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-x-twitter"></i>
-                        </a>
-                        <a href="https://youtube.com/yourchannel" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-youtube"></i>
-                        </a>
-                        <a href="https://twitch.tv/hypekingfish" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-twitch"></i>
-                        </a>
-                        <a href="https://discord.gg/yourdiscord" aria-label="Discord" target="_blank" rel="noopener noreferrer">
-                            <i class="fab fa-discord"></i>
-                        </a>
-                    </div>
-                    <div class="footer-support">
-                        <h4>Support the Site</h4>
-                        <a href="https://www.buymeacoffee.com/Hypekingfish"><img src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=Hypekingfish&button_colour=ffc425&font_colour=000000&font_family=Poppins&outline_colour=000000&coffee_colour=FFDD00" /></a>
-                    </div>
-                    <p class="footer-copyright">
-                        <small>
-                            &copy; <span id="year"></span> Hypekingfish. All rights reserved.<br>
-                            All content is property of Hypekingfish unless otherwise noted.
-                        </small>
-                    </p>
-                </div>
-            </footer>
-        <script>
-        document.getElementById("year").textContent = new Date().getFullYear();
-        </script>
-        <script src="scripts/navmenu.js"></script>
-    </body>
+      </p>
+  </section>
+  </div>
+  <footer class="site-footer">
+    <div class="footer-content">
+      <div class="footer-branding">
+        <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag" />
+        <span class="footer-title">Created with passion by <strong>Hypekingfish</strong></span>
+        <img src="img/Progress_Pride_Flag.png" alt="Progress Pride Flag" class="footer-flag" />
+      </div>
+      <div class="footer-social">
+        <a href="https://github.com/[your-actual-username]" aria-label="GitHub" target="_blank"
+          rel="noopener noreferrer">
+          <i class="fab fa-github"></i>
+        </a>
+        <a href="https://twitter.com/fishnbuckjr02" aria-label="Twitter" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-x-twitter"></i>
+        </a>
+        <a href="https://youtube.com/yourchannel" aria-label="YouTube" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-youtube"></i>
+        </a>
+        <a href="https://twitch.tv/hypekingfish" aria-label="Twitch" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-twitch"></i>
+        </a>
+        <a href="https://discord.gg/yourdiscord" aria-label="Discord" target="_blank" rel="noopener noreferrer">
+          <i class="fab fa-discord"></i>
+        </a>
+      </div>
+      <div class="footer-support">
+        <h4>Support the Site</h4>
+        <a href="https://www.buymeacoffee.com/Hypekingfish"><img
+            src="https://img.buymeacoffee.com/button-api/?text=Buy me a coffee&emoji=&slug=Hypekingfish&button_colour=ffc425&font_colour=000000&font_family=Poppins&outline_colour=000000&coffee_colour=FFDD00" /></a>
+      </div>
+      <p class="footer-copyright">
+        <small>
+          &copy; <span id="year"></span> <strong>Hypekingfish</strong> All rights reserved.<br />
+          All content is property of Hypekingfish unless otherwise noted.<br />
+          VATSIM, vZSE ARTCC, and all related logos are trademarks of their respective owners.<br />
+          This site is not affiliated with or endorsed by VATSIM or any official aviation authority.<br />
+          Images and content may not be reproduced without permission.<br />
+          For inquiries, contact: <a href="mailto:hypekingfishttv@gmail.com">hypekingfishttv@gmail.com</a><br />
+          Website code and design by Hypekingfish.<br />
+          Some images and data may be used under fair use for educational or informational purposes.<br />
+          If you believe your copyright has been infringed, please contact me for prompt removal or credit.<br />
+          No personal data is collected or stored by this site.<br />
+          Last updated: <span id="last-updated">2024-06-09</span>
+        </small>
+      </p>
+    </div>
+  </footer>
+  <script>
+    document.getElementById("last-updated").textContent = document.lastModified.split(' ')[0];
+  </script>
+  <script>
+    document.getElementById("year").textContent = new Date().getFullYear();
+  </script>
+  <script src="scripts/navmenu.js"></script>
+</body>
+
 </html>
